--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
     </scm>
     <properties>
         <java.version>21</java.version>
+        <dotenv.version>3.2.0</dotenv.version>
+        <ulid.version>5.2.3</ulid.version>
+        <cloudinary.version>2.0.0</cloudinary.version>
+        <modelmapper.version>3.2.1</modelmapper.version>
+        <querydsl.version>5.0.0</querydsl.version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -70,7 +76,22 @@
         <dependency>
             <groupId>com.github.f4b6a3</groupId>
             <artifactId>ulid-creator</artifactId>
-            <version>5.2.3</version>
+            <version>${ulid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http5</artifactId>
+            <version>${cloudinary.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>${dotenv.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -93,6 +114,7 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
