--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <ulid.version>5.2.3</ulid.version>
         <cloudinary.version>2.0.0</cloudinary.version>
         <modelmapper.version>3.2.1</modelmapper.version>
+        <spring.modulith.version>1.3.4</spring.modulith.version>
     </properties>
     <dependencies>
         <dependency>
@@ -90,6 +91,17 @@
             <groupId>io.github.cdimascio</groupId>
             <artifactId>dotenv-java</artifactId>
             <version>${dotenv.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.modulith</groupId>
+            <artifactId>spring-modulith-api</artifactId>
+            <version>${spring.modulith.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.modulith</groupId>
+            <artifactId>spring-modulith-starter-test</artifactId>
+            <version>${spring.modulith.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
