feat: implement authentication module with JWT support and user registration/login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=validate
 
+# JWT configuration
+# access token expiration in 15 minutes (900000 ms)
+# refresh token expiration in 7 days (604800000 ms)
+jwt.issuer=efood
+jwt.access-expiration=900000
+jwt.refresh-expiration=604800000
+jwt.private-key-path=classpath:keys/private.pem
+jwt.public-key-path=classpath:keys/public.pem
+
 
