feat: implement JWT authentication flow with custom entry point and role handling

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
             <artifactId>passay</artifactId>
             <version>${passay.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
