feat: add admin user initializer and configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,10 @@ jwt.refresh-expiration=604800000
 jwt.private-key-path=classpath:keys/private.pem
 jwt.public-key-path=classpath:keys/public.pem
 
+# Security configuration
+admin.email=admin@example.com
+admin.password=admin
+admin.first-name=Admin
+admin.last-name=Bao
+
 
