feat: implement admin category management with pagination and soft delete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ jwt.public-key-path=classpath:keys/public.pem
 
 # Security configuration
 admin.email=admin@example.com
-admin.password=admin
+admin.password=admin123
 admin.first-name=Admin
 admin.last-name=Bao
 
