--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.application.name=ecommerce-be
 server.port=8080
 spring.config.import=optional:secret.properties
 
+# Server configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+
 # Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/nr_ecommerce
 spring.datasource.username=postgres
