feat: add RabbitMQ integration for image deletion and enhance product management with new DTOs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,10 +38,16 @@ jwt.refresh-expiration=604800000
 jwt.private-key-path=classpath:keys/private.pem
 jwt.public-key-path=classpath:keys/public.pem
 
-# Security configuration
+# Security admin configuration
 admin.email=admin@example.com
 admin.password=admin123
 admin.first-name=Admin
 admin.last-name=Bao
 
+
+# RabbitMQ configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
