--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <spring.modulith.version>1.3.4</spring.modulith.version>
         <jwt.version>0.12.6</jwt.version>
         <passay.version>1.6.6</passay.version>
+        <rabbitmq.version>5.25.0</rabbitmq.version>
     </properties>
     <dependencies>
         <dependency>
@@ -148,6 +149,20 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>${rabbitmq.version}</version>
         </dependency>
 
 
