--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <jwt.version>0.12.6</jwt.version>
         <passay.version>1.6.6</passay.version>
         <rabbitmq.version>5.25.0</rabbitmq.version>
+        <springdoc.version>2.8.6</springdoc.version>
     </properties>
     <dependencies>
         <dependency>
@@ -163,6 +164,12 @@
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
             <version>${rabbitmq.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
 
 
