feat: integrate Redis caching for user and role management, refactor related services

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,16 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    command: [ "redis-server", "--appendonly", "yes" ] # enables persistence
+    restart: unless-stopped
+
+volumes:
+  redis-data:
