--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+# Redis configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
