fix: add frontend configuration and enhance API security with role-based access, fix n+1 problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=ecommerce-be
 server.port=8080
 spring.config.import=optional:secret.properties
 
+# Frontend configuration
+app.frontend.url=http://localhost:5173
+
 # Server configuration
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
